fix(board): removed horizontal scrollbar in mobile view

--- a/styles/media-board.css
+++ b/styles/media-board.css
@@ -12,7 +12,6 @@
 @media(max-width: 1040px) {
 
     .board-container {
-        width: 100vw;
         min-height: 100vh;
         margin: 0;
         margin-top: 100px;
